syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

option java_package = "com.betwowt.grpc";
option java_multiple_files = true;
option java_outer_classname = "InviteProto";


message ShowReq{
  string userId =1;
}

message ShowRes{
  repeated Invite invite = 1;
}

message Invite{
  string inviteCode = 1;
  string inviteUserId = 2;
  string userEmail = 3;
  google.protobuf.Timestamp createTime =4;
  google.protobuf.Timestamp lastUpdateTime = 5;
  string status = 6;
  string statusDesc = 7;
}

message InviteReq{
  string inviteUserId = 1;
  string inviteEmail = 2;
}

message InviteRes{
  string inviteCode = 1;
}

service InviteService {
  rpc show (ShowReq) returns (ShowRes);
  rpc invite (InviteReq) returns (InviteRes);
}